# solcast-api-csharp-sdk

./: .env.example  .gitignore  404.html  README.md  SolcastAPI.sln  generate_sdk_csharp.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  unmetered_locations.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-and-test.yml  deploy-docs.yml  docs.yml  tests.yml
aggregations/: index.html
docs/: aggregations.md  forecast.md  historic.md  index.md  live.md  pv_power_sites.md  tmy.md
docs/notebooks/: 1.1 Getting Data - Historic Solar Radiation.ipynb
examples/Solcast.Examples/: AggregationExample.cs  ForecastExample.cs  HistoricExample.cs  LiveExample.cs  Program.cs  PvPowerSitesExample.cs  Solcast.Examples.csproj  TmyExample.cs
forecast/: index.html
historic/: index.html
live/: index.html
notebooks/1.1 Getting Data - Historic Solar Radiation/: index.html
pv_power_sites/: index.html
src/Solcast/: Solcast.csproj  SolcastUrls.cs
src/Solcast/Clients/: AggregationClient.cs  BaseClient.cs  ForecastClient.cs  GeographicClient.cs  HistoricClient.cs  HistoricForecastClient.cs  LiveClient.cs  PvPowerSiteClient.cs  PvPowerSitesClient.cs  TmyClient.cs  UnmeteredLocations.cs
src/Solcast/Models/: RadiationAndWeatherResponse.cs  WeatherData.cs
src/Solcast/Utilities/: ApiResponse.cs  SolcastUrls.cs  (+1 more)
tests/Solcast.Tests/: AggregationClientTests.cs  ForecastClientTests.cs  HistoricClientTests.cs  LiveClientTests.cs  PvPowerSiteClientTests.cs  PvPowerSitesClientTests.cs  Solcast.Tests.csproj  TmyClientTests.cs
tmy/: index.html
(+69 files in other folders)
